--- a/index.html
+++ b/index.html
@@ -1,39 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive pricing component</title>
+    <!-- Styles -->
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/style.css" />
 
-  Simple, traffic-based pricing
-  Sign-up for our 30-day trial. No credit card required. 
+    <!-- Fonts -->
 
-  Pageviews
-  $ /month
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Manrope"
+    />
 
-  Monthly Billing
-  Yearly Billing 25% discount
+    <!-- displays site properly based on user's device -->
 
-  Unlimited websites
-  100% data ownership
-  Email reports
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  Start my trial
-  
-  <div class="attribution">
+    <title>Frontend Mentor | Interactive pricing component</title>
+  </head>
+  <body>
+    <header class="head">
+      <img src="./images/pattern-circles.svg" alt="pattern" class="head-bg" />
+
+      <div class="head-content">
+        <h1 class="title">Simple, traffic-based pricing</h1>
+
+        <p class="subtitle">
+          Sign-up for our 30-day trial. No credit card required.
+        </p>
+      </div>
+    </header>
+
+    <section class="container">
+      <div class="project-container">
+        <div class="pricing-container">
+          <h4 class="views">10K pageviews</h4>
+
+          <h4 class="price"><span class="total-price">$8.00</span> /month</h4>
+        </div>
+
+        <div class="slider-container">
+          <input type="range" min="0" max="100" value="0" class="slider" />
+        </div>
+
+        <div class="pricing-plan">
+          <p class="monthly">Monthly Billing</p>
+
+          <label class="switch">
+            <input type="checkbox" id="discount" />
+
+            <span class="switch-slider round"></span>
+          </label>
+
+          <p class="yearly">Yearly Billing</p>
+
+          <p class="discount">25% discount</p>
+        </div>
+
+        <hr />
+
+        <div class="bottom-container">
+          <ul class="features">
+            <li>
+              <span class="list-item">Unlimited websites</span>
+            </li>
+
+            <li>
+              <span class="list-item">100% data ownership</span>
+            </li>
+
+            <li>
+              <span class="list-item">Email reports</span>
+            </li>
+          </ul>
+
+          <button class="submit-btn">Start my trial</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  </div> -->
+
+    <script src="app.js"></script>
+  </body>
 </html>
