--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="./styles/style.css" />
 
+    <link rel="stylesheet" href="styles/mobile.css" />
+
     <!-- Fonts -->
 
     <link
@@ -35,7 +37,8 @@
         <h1 class="title">Simple, traffic-based pricing</h1>
 
         <p class="subtitle">
-          Sign-up for our 30-day trial. No credit card required.
+          Sign-up for our 30-day trial. <br />
+          No credit card required.
         </p>
       </div>
     </header>
@@ -45,11 +48,18 @@
         <div class="pricing-container">
           <h4 class="views">10K pageviews</h4>
 
-          <h4 class="price"><span class="total-price">$8.00</span> /month</h4>
+          <h4 class="price"><span class="total-price">$8.00</span>/month</h4>
         </div>
 
         <div class="slider-container">
-          <input type="range" min="0" max="100" value="0" class="slider" />
+          <input
+            type="range"
+            min="0"
+            max="100"
+            value="0"
+            step="25"
+            class="slider"
+          />
         </div>
 
         <div class="pricing-plan">
@@ -63,7 +73,9 @@
 
           <p class="yearly">Yearly Billing</p>
 
-          <p class="discount">25% discount</p>
+          <p class="desktop discount">25% discount</p>
+
+          <p class="mobile discount">-25%</p>
         </div>
 
         <hr />
@@ -88,10 +100,12 @@
       </div>
     </section>
 
-    <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Omar Mohammed</a>.
+    </div>
 
     <script src="app.js"></script>
   </body>
